Refactored some elements of the design to support all HTTP methods on the IDnaHttpClient interface and related classes. Refactored the ISnesActivity class and generated a new ActivityBase class to handle all http methods. Added new Send method that allows activity to choose with HTTP method(s) to use in the actionning of it's activity (not just POST). Updated SnesActivityProcessor to use the Send method on the new activity and inject the HttpClient dependency (for improved testability).

--- a/Main/Source/Windows Services/DnaEventsService/DnaEventProcessorService/App.config
+++ b/Main/Source/Windows Services/DnaEventsService/DnaEventProcessorService/App.config
@@ -6,18 +6,11 @@
     <section name="dataConfiguration" type="Microsoft.Practices.EnterpriseLibrary.Data.Configuration.DatabaseSettings, Microsoft.Practices.EnterpriseLibrary.Data, Version=4.1.0.0, Culture=neutral, PublicKeyToken=54b8fe30038faf0d" />
     <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
       <section name="DnaEventProcessorService.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-      <!--<section name="SNeSEventProcessor.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-      <section name="SNeSEventProcessorConsoleHost.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />-->
     </sectionGroup>
   </configSections>
   <loggingConfiguration name="Logging Application Block" tracingEnabled="true"
-    defaultCategory="General" logWarningsWhenNoCategoriesMatch="true">
+    defaultCategory="General" logWarningsWhenNoCategoriesMatch="false">
     <listeners>
-      <add fileName="trace.log" header="----------------------------------------"
-        footer="----------------------------------------" formatter="MethodTracing Formatter"
-        listenerDataType="Microsoft.Practices.EnterpriseLibrary.Logging.Configuration.FlatFileTraceListenerData, Microsoft.Practices.EnterpriseLibrary.Logging, Version=4.1.0.0, Culture=neutral, PublicKeyToken=54b8fe30038faf0d"
-        traceOutputOptions="None" filter="All" type="Microsoft.Practices.EnterpriseLibrary.Logging.TraceListeners.FlatFileTraceListener, Microsoft.Practices.EnterpriseLibrary.Logging, Version=4.1.0.0, Culture=neutral, PublicKeyToken=54b8fe30038faf0d"
-        name="FlatFile TraceListener" />
       <add fileName="exmoderationprocessor.requests.log" header="----------------------------------------"
         footer="----------------------------------------" formatter="Requests"
         listenerDataType="Microsoft.Practices.EnterpriseLibrary.Logging.Configuration.FlatFileTraceListenerData, Microsoft.Practices.EnterpriseLibrary.Logging, Version=4.1.0.0, Culture=neutral, PublicKeyToken=54b8fe30038faf0d"
@@ -28,6 +21,11 @@
         listenerDataType="Microsoft.Practices.EnterpriseLibrary.Logging.Configuration.FlatFileTraceListenerData, Microsoft.Practices.EnterpriseLibrary.Logging, Version=4.1.0.0, Culture=neutral, PublicKeyToken=54b8fe30038faf0d"
         traceOutputOptions="None" filter="All" type="Microsoft.Practices.EnterpriseLibrary.Logging.TraceListeners.FlatFileTraceListener, Microsoft.Practices.EnterpriseLibrary.Logging, Version=4.1.0.0, Culture=neutral, PublicKeyToken=54b8fe30038faf0d"
         name="ExModerationProcessor.Responses" />
+      <add fileName="trace.log" header="----------------------------------------"
+        footer="----------------------------------------" formatter="MethodTracing Formatter"
+        listenerDataType="Microsoft.Practices.EnterpriseLibrary.Logging.Configuration.FlatFileTraceListenerData, Microsoft.Practices.EnterpriseLibrary.Logging, Version=4.1.0.0, Culture=neutral, PublicKeyToken=54b8fe30038faf0d"
+        traceOutputOptions="None" filter="All" type="Microsoft.Practices.EnterpriseLibrary.Logging.TraceListeners.FlatFileTraceListener, Microsoft.Practices.EnterpriseLibrary.Logging, Version=4.1.0.0, Culture=neutral, PublicKeyToken=54b8fe30038faf0d"
+        name="FlatFile TraceListener" />
       <add source="Enterprise Library Logging" formatter="Responses"
         log="Application" machineName="" listenerDataType="Microsoft.Practices.EnterpriseLibrary.Logging.Configuration.FormattedEventLogTraceListenerData, Microsoft.Practices.EnterpriseLibrary.Logging, Version=4.1.0.0, Culture=neutral, PublicKeyToken=54b8fe30038faf0d"
         traceOutputOptions="None" filter="All" type="Microsoft.Practices.EnterpriseLibrary.Logging.TraceListeners.FormattedEventLogTraceListener, Microsoft.Practices.EnterpriseLibrary.Logging, Version=4.1.0.0, Culture=neutral, PublicKeyToken=54b8fe30038faf0d"
@@ -60,17 +58,17 @@
         name="Responses" />
     </formatters>
     <categorySources>
-      <add switchValue="All" name="ExModerationProcessor.Responses">
-        <listeners>
-          <add name="ExModerationProcessor.Responses" />
-        </listeners>
-      </add>
       <add switchValue="All" name="ExModerationProcessor.Requests">
         <listeners>
           <add name="ExModerationProcessor.Requests" />
         </listeners>
       </add>
-      <add switchValue="All" name="General">
+      <add switchValue="All" name="ExModerationProcessor.Responses">
+        <listeners>
+          <add name="ExModerationProcessor.Responses" />
+        </listeners>
+      </add>
+      <add switchValue="Critical" name="General">
         <listeners>
           <add name="Formatted EventLog TraceListener" />
         </listeners>
@@ -103,32 +101,32 @@
   </loggingConfiguration>
   <connectionStrings>
     <add name="DnaEventProcessorService.Properties.Settings.guideConnectionString"
-      connectionString="Data Source=ops-dna1\sql2005;Initial Catalog=smallGuide;Integrated Security=True"
+      connectionString="Data Source=.\sqlserver2005;Initial Catalog=smallGuide;Integrated Security=True"
       providerName="System.Data.SqlClient" />
   </connectionStrings>
-	<!--<connectionStrings>
+  <!--<connectionStrings>
 		<add name="DnaEventProcessorService.Properties.Settings.guideConnectionString"
 		  connectionString="Data Source=.\SQLSERVER2005;Initial Catalog=TheGuide;Integrated Security=True"
 		  providerName="System.Data.SqlClient" />
 	</connectionStrings>-->
   <applicationSettings>
-    <DnaEventProcessingService.Properties.Settings>
+    <DnaEventProcessorService.Properties.Settings>
       <setting name="activityProcessingPeriod" serializeAs="String">
         <value>2000</value>
       </setting>
       <setting name="snesBaseUri" serializeAs="String">
         <value>http://localhost</value>
       </setting>
-	  <!--<setting name="snesBaseUri" serializeAs="String">
+      <!--<setting name="snesBaseUri" serializeAs="String">
 		<value>https://api.test.bbc.co.uk/social/social/rest</value>
-	  </setting>-->	
+	  </setting>-->
       <setting name="certificateName" serializeAs="String">
         <value>DNA</value>
       </setting>
       <setting name="proxyAddress" serializeAs="String">
         <value>http://www-cache.reith.bbc.co.uk:80</value>
       </setting>
-    </DnaEventProcessingService.Properties.Settings>
+    </DnaEventProcessorService.Properties.Settings>
     <!--<SNeSEventProcessor.Properties.Settings>
       <setting name="activityProcessingPeriod" serializeAs="String">
         <value>2000</value>
