--- a/Main/Source/Windows Services/DnaEventsService/DnaEventProcessorService.IntegrationTests/App.config
+++ b/Main/Source/Windows Services/DnaEventsService/DnaEventProcessorService.IntegrationTests/App.config
@@ -105,9 +105,9 @@
     <add name="DnaEventProcessorService.Properties.Settings.guideConnectionString"
       connectionString="Data Source=.\SQLSERVER2005;Initial Catalog=TheGuide;Integrated Security=True"
       providerName="System.Data.SqlClient" />
-    <add name="DnaEventProcessorService.IntegrationTests.Properties.Settings.guideConnectionString"
-      connectionString="database=smallguide; server=vp-dev-dna-db1\dev; user id=sa; password=b0x0ftr1cks; pooling=false" />
     <!--<add name="DnaEventProcessorService.IntegrationTests.Properties.Settings.guideConnectionString"
-      connectionString="Data Source=.\SQLSERVER2005;Initial Catalog=TheGuide;Integrated Security=True" />-->
+      connectionString="database=smallguide; server=vp-dev-dna-db1\dev; user id=sa; password=b0x0ftr1cks; pooling=false" />-->
+    <add name="DnaEventProcessorService.IntegrationTests.Properties.Settings.guideConnectionString"
+      connectionString="Data Source=.\SQLSERVER2005;Initial Catalog=TheGuide;Integrated Security=True" />
   </connectionStrings>
 </configuration>
