--- a/Main/Tools/UpdateSp/updatesp.csproj
+++ b/Main/Tools/UpdateSp/updatesp.csproj
@@ -27,6 +27,10 @@
     </UpgradeBackupLocation>
     <OldToolsVersion>3.5</OldToolsVersion>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
+    <SccProjectName>SAK</SccProjectName>
+    <SccLocalPath>SAK</SccLocalPath>
+    <SccAuxPath>SAK</SccAuxPath>
+    <SccProvider>SAK</SccProvider>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <OutputPath>bin\Debug\</OutputPath>
@@ -113,10 +117,9 @@
     <Compile Include="BuildConfigurationList.cs" />
     <Compile Include="DataReader.cs" />
     <Compile Include="DbObject.cs" />
-    <Compile Include="FunctionDbObject.cs" />
-    <Compile Include="DbObjectDefintions.cs" />
-    <Compile Include="ProcedureDbObject.cs" />
     <Compile Include="DBUpgradeScriptDbObject.cs" />
+    <Compile Include="FunctionDbObject.cs" />
+    <Compile Include="ProcedureDbObject.cs" />
     <Compile Include="ScriptFile.cs" />
     <Compile Include="TriggerDbObject.cs" />
     <Compile Include="updatespmain.cs">
@@ -124,7 +127,6 @@
     </Compile>
     <Compile Include="UpdateSpTask.cs" />
     <Compile Include="ViewDbObject.cs" />
-    <None Include="updatesp-Sample.config" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
