Sticky threads Implementation:
It is turned on and off via a site option
The data is stored in a table  and inserts/deletes from this table can be auditted from an audit table.
The user sticking the thread must be an editor or super user
I have added new sp's so that the site option changes which sp is called - meaning without the siteoption it should continue down the same path
I have increased unit testing on BBC.Dna.Objects
I have added function end to end tests to test this functionality

--- a/Main/Source/Shared/BBC.Dna.Objects/BBC.Dna.Objects.csproj
+++ b/Main/Source/Shared/BBC.Dna.Objects/BBC.Dna.Objects.csproj
@@ -73,6 +73,7 @@
     <Compile Include="Club.cs" />
     <Compile Include="ArticleInfoReferencesUser.cs" />
     <Compile Include="Error.cs" />
+    <Compile Include="IDnaCachable.cs" />
     <Compile Include="SmileyTranslator.cs" />
     <Compile Include="ThreadPostSummary.cs" />
     <Compile Include="Entities.cs" />
