--- a/Main/Source/Databases/The Guide/storedprocedures/storedprocedures.csproj
+++ b/Main/Source/Databases/The Guide/storedprocedures/storedprocedures.csproj
@@ -1272,6 +1272,10 @@
     <None Include="CommentForumUpdate.sql" />
     <None Include="cachegetforumlastupdate.sql" />
     <None Include="cachegetthreadlastupdate.sql" />
+    <None Include="addthreadtostickylist.sql" />
+    <None Include="forumgetthreadlist_datecreated_includingstickythreads.sql" />
+    <None Include="forumgetthreadlist_lastposted_includingstickythreads.sql" />
+    <None Include="removethreadfromstickylist.sql" />
     <None Include="FetchExLinkModerationEventHistory.sql" />
     <None Include="FetchExLinkModerationHistory.sql" />
     <None Include="setforumhosturl.sql" />
