removed accessor object as it is causing problems on build servers and is not used

--- a/Main/Source/Shared/BBC.Dna.Objects.Tests/BBC.Dna.Objects.Tests.csproj
+++ b/Main/Source/Shared/BBC.Dna.Objects.Tests/BBC.Dna.Objects.Tests.csproj
@@ -117,7 +117,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <Shadow Include="Test References\BBC.Dna.Objects.accessor" />
+    <Folder Include="Test References\" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
