Revocation of comment activities. Includes extension of the DnaHttpClient to support GET, PUT, DELETE methods in addition to POST. SnesActivitesQuery to query Snes for particular activity. Delete Activity to remove (revoke) an activity from Snes. Some additional defensive programming around the logger and general refactoring following code analysis and resharper recommendations. Unit tests and Integration tests added including those after discussion with MPG.

--- a/Main/Source/Windows Services/DnaEventsService/DnaEventProcessorService.IntegrationTests/App.config
+++ b/Main/Source/Windows Services/DnaEventsService/DnaEventProcessorService.IntegrationTests/App.config
@@ -5,6 +5,7 @@
     <section name="loggingConfiguration" type="Microsoft.Practices.EnterpriseLibrary.Logging.Configuration.LoggingSettings, Microsoft.Practices.EnterpriseLibrary.Logging, Version=4.1.0.0, Culture=neutral, PublicKeyToken=54b8fe30038faf0d" />
     <section name="dataConfiguration" type="Microsoft.Practices.EnterpriseLibrary.Data.Configuration.DatabaseSettings, Microsoft.Practices.EnterpriseLibrary.Data, Version=4.1.0.0, Culture=neutral, PublicKeyToken=54b8fe30038faf0d" />
     <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+      <section name="DnaEventProcessorService.IntegrationTests.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
       <section name="DnaEventProcessorService.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
       <!--<section name="SNeSEventProcessor.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
       <section name="SNeSEventProcessorConsoleHost.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />-->
@@ -105,9 +106,20 @@
     <add name="DnaEventProcessorService.Properties.Settings.guideConnectionString"
       connectionString="Data Source=.\SQLSERVER2005;Initial Catalog=TheGuide;Integrated Security=True"
       providerName="System.Data.SqlClient" />
-    <!--<add name="DnaEventProcessorService.IntegrationTests.Properties.Settings.guideConnectionString"
-      connectionString="database=smallguide; server=vp-dev-dna-db1\dev; user id=sa; password=b0x0ftr1cks; pooling=false" />-->
     <add name="DnaEventProcessorService.IntegrationTests.Properties.Settings.guideConnectionString"
-      connectionString="Data Source=.\SQLSERVER2005;Initial Catalog=TheGuide;Integrated Security=True" />
+      connectionString="Data Source=.\sqlserver2005;Initial Catalog=smallGuide;Integrated Security=True" />
   </connectionStrings>
+  <applicationSettings>
+    <DnaEventProcessorService.IntegrationTests.Properties.Settings>
+      <setting name="proxyAddress" serializeAs="String">
+        <value>http://10.152.4.15:80/</value>
+      </setting>
+      <setting name="baseUri" serializeAs="String">
+        <value>https://api.stage.bbc.co.uk/</value>
+      </setting>
+      <setting name="certificateName" serializeAs="String">
+        <value>dna live</value>
+      </setting>
+    </DnaEventProcessorService.IntegrationTests.Properties.Settings>
+  </applicationSettings>
 </configuration>
