--- a/Main/Source/Windows Services/DnaEventsService/DnaEventService.Common/DnaEventService.Common.csproj
+++ b/Main/Source/Windows Services/DnaEventsService/DnaEventService.Common/DnaEventService.Common.csproj
@@ -66,11 +66,12 @@
     <Compile Include="IDnaLogger.cs" />
     <Compile Include="LogUtility.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="X509CertificateLoader.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\..\Shared\BBC.Dna.Data\BBC.Dna.Data.csproj">
       <Project>{F79CF818-D597-4C2F-A61D-87773951E234}</Project>
-      <Name>BBC.Dna.Data %28Source\Shared\BBC.Dna.Data\BBC.Dna.Data%29</Name>
+      <Name>BBC.Dna.Data</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
