--- a/Main/Source/Windows Services/DnaEventsService/DnaEventProcessorService.IntegrationTests/DnaEventProcessorService.IntegrationTests.csproj
+++ b/Main/Source/Windows Services/DnaEventsService/DnaEventProcessorService.IntegrationTests/DnaEventProcessorService.IntegrationTests.csproj
@@ -53,8 +53,15 @@
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
     <Reference Include="System.Data" />
+    <Reference Include="System.Runtime.Serialization">
+      <RequiredTargetFramework>3.0</RequiredTargetFramework>
+    </Reference>
+    <Reference Include="System.ServiceModel.Web">
+      <RequiredTargetFramework>3.5</RequiredTargetFramework>
+    </Reference>
     <Reference Include="System.Transactions" />
     <Reference Include="System.Web" />
+    <Reference Include="System.XML" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ExModerationProcessorTests.cs" />
@@ -64,9 +71,11 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
       <DependentUpon>Settings.settings</DependentUpon>
     </Compile>
-    <Compile Include="UnitTest1.cs" />
+    <Compile Include="RevokeCommentActivity.IntegrationTest.cs" />
+    <Compile Include="LogFileSeperationTests.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="activities.js" />
     <Content Include="AuthoringTests.txt" />
   </ItemGroup>
   <ItemGroup>
@@ -79,19 +88,19 @@
   <ItemGroup>
     <ProjectReference Include="..\..\..\Shared\BBC.Dna.Data\BBC.Dna.Data.csproj">
       <Project>{F79CF818-D597-4C2F-A61D-87773951E234}</Project>
-      <Name>BBC.Dna.Data %28Source\Shared\BBC.Dna.Data\BBC.Dna.Data%29</Name>
+      <Name>BBC.Dna.Data</Name>
     </ProjectReference>
     <ProjectReference Include="..\DnaEventService.Common\DnaEventService.Common.csproj">
       <Project>{8A8A0013-4D42-46FF-A0F9-5B844BBF42CE}</Project>
-      <Name>DnaEventService.Common %28Source\Windows Services\DnaEventsService\DnaEventService.Common\DnaEventService.Common%29</Name>
+      <Name>DnaEventService.Common</Name>
     </ProjectReference>
     <ProjectReference Include="..\ExModerationProcessor\ExModerationProcessor.csproj">
       <Project>{F2C46478-2092-4D90-AEB2-46FD54FF6053}</Project>
-      <Name>ExModerationProcessor %28Source\Windows Services\DnaEventsService\ExModerationProcessor\ExModerationProcessor%29</Name>
+      <Name>ExModerationProcessor</Name>
     </ProjectReference>
     <ProjectReference Include="..\SNeSActivityProcessor\SnesActivityProcessor.csproj">
       <Project>{B2ECD482-BF9E-42D5-ABDF-51BE487DD627}</Project>
-      <Name>SnesActivityProcessor %28Source\Windows Services\DnaEventsService\SNeSActivityProcessor\SnesActivityProcessor%29</Name>
+      <Name>SnesActivityProcessor</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
