--- a/Main/Source/Schemas/Schemas.csproj
+++ b/Main/Source/Schemas/Schemas.csproj
@@ -126,6 +126,7 @@
     </None>
     <None Include="Club.xsd" />
     <None Include="ContentSignifSettings.xsd" />
+    <None Include="Result.xsd" />
     <None Include="DistressMessages.xsd" />
     <None Include="Dna.Services\thread.xsd" />
     <None Include="Dna.Services\threadlist.xsd" />
@@ -456,6 +457,8 @@
     </None>
     <None Include="SubscribingUsers-List.xsd" />
     <None Include="SystemMessageMailbox.xsd" />
+    <None Include="TermList.xsd" />
+    <None Include="TermsFilterAdmin.xsd" />
     <None Include="Thread.xsd" />
     <None Include="Threads.xsd" />
     <None Include="threadsearchphrase.xsd">
