--- a/Main/Source/Web Services/BBC.DNA.Dnapages/BBC.DNA.Dnapages.csproj
+++ b/Main/Source/Web Services/BBC.DNA.Dnapages/BBC.DNA.Dnapages.csproj
@@ -132,6 +132,20 @@
     <Compile Include="ContentSignifPage.aspx.designer.cs">
       <DependentUpon>ContentSignifPage.aspx</DependentUpon>
     </Compile>
+    <Compile Include="TermsFilterImport.aspx.cs">
+      <DependentUpon>TermsFilterImport.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="TermsFilterImport.aspx.designer.cs">
+      <DependentUpon>TermsFilterImport.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="TermsFilterAdmin.aspx.cs">
+      <DependentUpon>TermsFilterAdmin.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="TermsFilterAdmin.aspx.designer.cs">
+      <DependentUpon>TermsFilterAdmin.aspx</DependentUpon>
+    </Compile>
     <Compile Include="DnaSignal.aspx.designer.cs">
       <DependentUpon>DnaSignal.aspx</DependentUpon>
     </Compile>
@@ -794,6 +808,8 @@
     <Content Include="App_Data\forum scheduled closed.xml" />
     <Content Include="App_Data\test_template6music.htm" />
     <Content Include="App_Data\test_templateBlast.htm" />
+    <Content Include="TermsFilterImport.aspx" />
+    <Content Include="TermsFilterAdmin.aspx" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\Microsoft\VisualStudio\v9.0\WebApplications\Microsoft.WebApplication.targets" />
@@ -810,7 +826,7 @@
         <WebProjectProperties>
           <UseIIS>False</UseIIS>
           <AutoAssignPort>True</AutoAssignPort>
-          <DevelopmentServerPort>4322</DevelopmentServerPort>
+          <DevelopmentServerPort>39392</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
           <IISUrl>
           </IISUrl>
