Updated the DnaIdentityWebServiceProxy.dll so that it only needs the IDENTITY cookie and not the IDENTITY-NAME cookie. Updated the logging in the DnaIndentityWebServiceProxy to be more meaningful and verbose. This is still turned off/on via the connection string. Removed the old SOAP class from the project Update the TestUserCreator class so it is able to use the new policies supplied by Identity. Also updated to cope with the new ID Applictaion NameSpace Attributes. Removed the IDENTITY-USERNAME cookie from calls to DnaIdenetityWebServiceProxy calls. Updated the FullInputContext class so it creates a IdentityRESTSignIn instance instead of the SOAP based version. Added new itegration tests for the DNaIDentityWebServiceProxy Rest interface calls. Updated both User.cpp and User.cs to cope with the new NameSpaces attributes in Identity and the UDNG in CBBC. If a site uses the SiteSuffix and the AutoGeneratedNames siteoptions, then the code syncs the sitesuffix with the name stored in Identity Added three new siteoptions CollectExtraDetails ( used by the skins to send the user back to Identity if the site has more than one identity policy ), UseSiteSuffix ( Used by sites that want to use the site specific name over the global username ) and AutoGeneratedNamesURL ( used by sites that have an external name generator. Users are sent to the given URL and then DNA updates the sitesuffix from the value stored in identity. Added new tests for both C++ and C# for the CBBC autogenerated names. Removed the UserMigrationTests.cs as they refer to the old SOAP API calls. Added new calls to the ProfileAPI.cs and ProfileConnection.cpp/h classes that allow you to check and get Application Namespaced Attributes.

--- a/Main/Source/Shared/DnaIdentityWebServiceProxy/DnaIdentityWebServiceProxy.csproj
+++ b/Main/Source/Shared/DnaIdentityWebServiceProxy/DnaIdentityWebServiceProxy.csproj
@@ -47,6 +47,7 @@
     <RegisterForComInterop>true</RegisterForComInterop>
     <GenerateSerializationAssemblies>Auto</GenerateSerializationAssemblies>
     <CheckForOverflowUnderflow>true</CheckForOverflowUnderflow>
+    <UseVSHostingProcess>false</UseVSHostingProcess>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -65,12 +66,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="IdentityServiceImplService.Setup.cs">
-    </Compile>
-    <Compile Include="IdentityServicesImplService.cs" />
     <Compile Include="IDnaIdentityWebServiceProxy.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="DnaIdentityWebServiceProxy.cs" />
     <Compile Include="IdentityRestSignIn.cs" />
   </ItemGroup>
   <ItemGroup>
