--- a/Main/Tests/Legacy Tests/FunctionalTests/FunctionalTests.csproj
+++ b/Main/Tests/Legacy Tests/FunctionalTests/FunctionalTests.csproj
@@ -290,6 +290,7 @@
     <Compile Include="ModeratorManagementPageTests.cs" />
     <Compile Include="NUnitAdapter.cs" />
     <Compile Include="RadioButtonListTester.cs" />
+    <Compile Include="SiteOptionsTests.cs" />
     <Compile Include="UserSynchronisationTests.cs" />
   </ItemGroup>
   <ItemGroup>
