First pass at the SPs to get CommentForums by most recently posted to and to return a flag denoting whether the user is a member of the notable group and adds in the IdentityUserID too
Creates new Index on Forums siteid lastposted

--- a/Main/Source/Databases/The Guide/functions/functions.csproj
+++ b/Main/Source/Databases/The Guide/functions/functions.csproj
@@ -47,6 +47,7 @@
     <None Include="udf_getusersiteidpairs.sql" />
     <None Include="udf_HasUserAcceptedTermsAndConditionsOfSite.sql" />
     <None Include="udf_IsUserAcceptingSubscriptions.sql" />
+    <None Include="udf_isusermemberofgroup.sql" />
     <None Include="udf_IsUserSubscriptionBlocked.sql" />
     <None Include="udf_IsWithinRange.sql" />
     <None Include="udf_removegrammaticalarticlesfromtext.sql" />
