Comments Api refactor  - added tests - renamed methods - cleaned up code
Sortby lastposted added with tests
Notable and BbcId added to user details

--- a/Main/Source/Shared/BBC.Dna.Services/BBC.Dna.Services.csproj
+++ b/Main/Source/Shared/BBC.Dna.Services/BBC.Dna.Services.csproj
@@ -94,6 +94,9 @@
     <Compile Include="status.aspx.cs">
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
+    <Compile Include="version.aspx.cs">
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\BBC.Dna.Data\BBC.Dna.Data.csproj">
