--- a/Main/Source/Web Services/BBC.DNA.Services.Comments/BBC.DNA.Services.Comments.csproj
+++ b/Main/Source/Web Services/BBC.DNA.Services.Comments/BBC.DNA.Services.Comments.csproj
@@ -107,6 +107,10 @@
       <Project>{A46E6756-CA6A-4C8A-A063-8515AFD1C614}</Project>
       <Name>BBC.Dna.Api %28Source\Shared\BBC.Dna.Api\BBC.Dna.Api%29</Name>
     </ProjectReference>
+    <ProjectReference Include="..\..\Shared\BBC.Dna.Data\BBC.Dna.Data.csproj">
+      <Project>{F79CF818-D597-4C2F-A61D-87773951E234}</Project>
+      <Name>BBC.Dna.Data %28Source\Shared\BBC.Dna.Data\BBC.Dna.Data%29</Name>
+    </ProjectReference>
     <ProjectReference Include="..\..\Shared\BBC.Dna.Groups\BBC.Dna.Groups.csproj">
       <Project>{33A2531A-AAAA-4A97-A2C1-F18E785D6F8D}</Project>
       <Name>BBC.Dna.Groups %28Source\Shared\BBC.Dna.Groups\BBC.Dna.Groups%29</Name>
@@ -145,6 +149,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="memcachedstatus.aspx" />
+    <Content Include="version.aspx" />
     <Content Include="xslt\2.0\comment.xsl" />
     <Content Include="xslt\2.0\commentinfo.xsl" />
     <Content Include="xslt\2.0\commentslist.xsl" />
@@ -172,7 +177,7 @@
         <WebProjectProperties>
           <UseIIS>False</UseIIS>
           <AutoAssignPort>True</AutoAssignPort>
-          <DevelopmentServerPort>39386</DevelopmentServerPort>
+          <DevelopmentServerPort>7734</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
           <IISUrl>http://localhost:8081/comments</IISUrl>
           <NTLMAuthentication>False</NTLMAuthentication>
