--- a/Main/Source/Shared/BBC.Dna.Api.Tests/BBC.Dna.Api.Tests.csproj
+++ b/Main/Source/Shared/BBC.Dna.Api.Tests/BBC.Dna.Api.Tests.csproj
@@ -96,6 +96,10 @@
       <Project>{F79CF818-D597-4C2F-A61D-87773951E234}</Project>
       <Name>BBC.Dna.Data %28Source\Shared\BBC.Dna.Data\BBC.Dna.Data%29</Name>
     </ProjectReference>
+    <ProjectReference Include="..\BBC.Dna.Moderation.Utils.Tests\BBC.Dna.Moderation.Utils.Tests.csproj">
+      <Project>{CD50FF01-F604-4C12-BFE7-199CE495313F}</Project>
+      <Name>BBC.Dna.Moderation.Utils.Tests</Name>
+    </ProjectReference>
     <ProjectReference Include="..\BBC.DNA.Moderation.Utils\BBC.DNA.Moderation.Utils.csproj">
       <Project>{8EB8245F-927C-469B-9DBB-4BAED2A9F420}</Project>
       <Name>BBC.DNA.Moderation.Utils %28Source\Shared\BBC.Dna.Moderation.Utils\BBC.DNA.Moderation.Utils%29</Name>
