Decode html tags for html output before xslt process - with tests Fix to link translator - with tests Demo items for api mods

--- a/Main/Source/Shared/BBC.Dna.Data/BBC.Dna.Data.csproj
+++ b/Main/Source/Shared/BBC.Dna.Data/BBC.Dna.Data.csproj
@@ -88,7 +88,7 @@
   <ItemGroup>
     <ProjectReference Include="..\BBC.Dna.Utils\BBC.Dna.Utils.csproj">
       <Project>{52E9F388-5ED0-4D9C-9A7D-53F92EA21D1D}</Project>
-      <Name>BBC.Dna.Utils</Name>
+      <Name>BBC.Dna.Utils %28Source\Shared\BBC.Dna.Utils\BBC.Dna.Utils%29</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
