First draft to be reviewed with Mark N next week
Additions of 2 new SPs to the CommentForumsReadBy sps to give a sort by order of postcount within a timeframe

Also a Most Posted to (ForumPostCount)  sort by in the normal CommentForumsReadBy's

--- a/Main/Source/Databases/The Guide/storedprocedures/storedprocedures.csproj
+++ b/Main/Source/Databases/The Guide/storedprocedures/storedprocedures.csproj
@@ -1265,6 +1265,8 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="cachegetarticleinfo2.sql" />
+    <None Include="CommentForumsReadBySiteNamePrefixWithinTimeFrame.sql" />
+    <None Include="CommentForumsReadBySiteNameWithinTimeFrame.sql" />
     <None Include="commentreplycreate.sql" />
     <None Include="commentsreadbythreadid.sql" />
     <None Include="commentthreadcreate.sql" />
