Added new staticcachemanager derived from ICachemanager but stores the cache in a static dictionary Refactored groups to use new cache and remove connection string passing

--- a/Main/Source/Shared/BBC.Dna.Utils/BBC.Dna.Utils.csproj
+++ b/Main/Source/Shared/BBC.Dna.Utils/BBC.Dna.Utils.csproj
@@ -130,6 +130,7 @@
     <Compile Include="QueryStringHelper.cs" />
     <Compile Include="QuoteTranslator.cs" />
     <Compile Include="RequestIDGenerator.cs" />
+    <Compile Include="StaticCacheManager.cs" />
     <Compile Include="Statistics.cs" />
     <Compile Include="StringUtils.cs" />
     <Compile Include="TimestampTextWriterListener.cs" />
