--- a/Main/Source/Shared/BBC.Dna.Utils.Tests/BBC.Dna.Utils.Tests.csproj
+++ b/Main/Source/Shared/BBC.Dna.Utils.Tests/BBC.Dna.Utils.Tests.csproj
@@ -35,6 +35,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Microsoft.Practices.EnterpriseLibrary.Caching, Version=4.1.0.0, Culture=neutral, PublicKeyToken=54b8fe30038faf0d, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\Reference DLLs\EnterpriseLibrary\Microsoft.Practices.EnterpriseLibrary.Caching.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework, Version=9.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" />
     <Reference Include="NMock2, Version=1.0.2313.18049, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
@@ -60,6 +64,7 @@
     <Compile Include="LinkTranslatorTests.cs" />
     <Compile Include="LockingTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="StaticCacheManagerTests.cs" />
     <Compile Include="StatisticsTests.cs" />
     <Compile Include="StringUtilsTest.cs" />
     <Compile Include="TestDateRangeValidation.cs" />
